--- a/JAVASCRIPT/Course_Materials/09-Data-Structures-Operators/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/09-Data-Structures-Operators/starter/index.html
@@ -39,7 +39,7 @@
 
 <body>
   <h1>Data Structures and Modern Operators</h1>
-  <script src="sets.js"></script>
+  <script src="Maps.js"></script>
 </body>
 
 </html>
