--- a/JAVASCRIPT/Course_Materials/11-Arrays-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/11-Arrays-Bankist/starter/index.html
@@ -124,6 +124,6 @@
     </footer> -->
 
     <script src="array-methods.js"></script>
-      <script src="script.js"></script>
+      <!-- <script src="script.js"></script> -->
   </body>
 </html>
