--- a/JAVASCRIPT/Course_Materials/11-Arrays-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/11-Arrays-Bankist/starter/index.html
@@ -123,7 +123,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-    <script src="array-methods.js"></script>
+    <script src="challenge1.js"></script>
       <!-- <script src="script.js"></script> -->
   </body>
 </html>
