--- a/JAVASCRIPT/Course_Materials/12-Numbers-Dates-Timers-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/12-Numbers-Dates-Timers-Bankist/starter/index.html
@@ -123,6 +123,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
+    <script src="numbers.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
