Advanced DOM Selections/Methods

--- a/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
@@ -351,5 +351,7 @@
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
+    <script src="select.js"></script>
+
   </body>
 </html>
