--- a/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
@@ -35,7 +35,7 @@
             <a class="nav__link" href="#section--3">Testimonials</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--btn btn--show-modal" href="#"
+            <a class="nav__link nav__link--btn btn--show-modal" href="#open"
               >Open account</a
             >
           </li>
@@ -334,7 +334,7 @@
       </p>
     </footer>
 
-    <div class="modal hidden">
+    <div class="modal hidden" id="open">
       <button class="btn--close-modal">&times;</button>
       <h2 class="modal__header">
         Open your bank account <br />
