Bankist-App WEB

--- a/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/13-Advanced-DOM-Bankist/starter/index.html
@@ -353,6 +353,6 @@
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
-    <script src="select.js"></script>
+    <!-- <script src="select.js"></script> -->
   </body>
 </html>
