--- a/JAVASCRIPT/Course_Materials/15-Mapty/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/15-Mapty/starter/index.html
@@ -107,7 +107,7 @@
 
     <p class="copyright">
       &copy; Copyright by
-      <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a>. Use for
+      <a class="twitter-link" target="_blank" href="https://twitter.com/NimohAgyin">Gideon Nimoh</a>. Use for
       learning or your portfolio. Don't use to teach. Don't claim
       as your own.
     </p>
