--- a/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
-  <script defer src="challenge.js"></script>
+  <script defer src="geolocate.js"></script>
+  <!-- <script defer src="challenge.js"></script> -->
+  <!-- <script defer src="lecture.js"></script> -->
   <title>Asynchronous JavaScript</title>
 </head>
 
