--- a/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
   <script defer src="geolocate.js"></script>
+  <script defer src="chal-2.js"></script>
   <!-- <script defer src="challenge.js"></script> -->
   <!-- <script defer src="lecture.js"></script> -->
   <title>Asynchronous JavaScript</title>
@@ -29,8 +30,10 @@
         </article>
         -->
     </div>
-    <button class="btn-country">Where am I?</button>
-    <div class="images"></div>
+    <!-- <button class="btn-country">Where am I?</button> -->
+    <div class="images">
+
+    </div>
   </main>
 </body>
 
