--- a/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
   <script defer src="geolocate.js"></script>
-  <script defer src="chal-2.js"></script>
+  <script defer src="async-await.js"></script>
   <!-- <script defer src="challenge.js"></script> -->
   <!-- <script defer src="lecture.js"></script> -->
   <title>Asynchronous JavaScript</title>
