--- a/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
+++ b/JAVASCRIPT/Course_Materials/16-Asynchronous/starter/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+    <script defer src="geolocate.js"></script>
+    <script defer src="chall-1.js"></script>
+    <!-- <script defer src="challenge.js"></script> -->
+    <!-- <script defer src="lecture.js"></script> -->
+    <title>Asynchronous JavaScript</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
-  <script defer src="geolocate.js"></script>
-  <script defer src="async-await.js"></script>
-  <!-- <script defer src="challenge.js"></script> -->
-  <!-- <script defer src="lecture.js"></script> -->
-  <title>Asynchronous JavaScript</title>
-</head>
-
-<body>
-  <main class="container">
-    <div class="countries">
-      <!--
+  <body>
+    <main class="container">
+      <div class="countries">
+        <!--
         <article class="country">
           <img class="country__img" src="" />
           <div class="country__data">
@@ -29,12 +28,9 @@
           </div>
         </article>
         -->
-    </div>
-    <!-- <button class="btn-country">Where am I?</button> -->
-    <div class="images">
-
-    </div>
-  </main>
-</body>
-
+      </div>
+      <!-- <button class="btn-country">Where am I?</button> -->
+      <div class="images"></div>
+    </main>
+  </body>
 </html>
