Working with PUG base.pug

--- a/NODE_JS/natours/starter/public/overview.html
+++ b/NODE_JS/natours/starter/public/overview.html
@@ -24,11 +24,7 @@
               <use xlink:href="img/icons.svg#icon-search"></use>
             </svg>
           </button>
-          <input
-            type="text"
-            placeholder="Search tours"
-            class="nav__search-input"
-          />
+          <input type="text" placeholder="Search tours" class="nav__search-input" />
         </form>
       </nav>
       <div class="header__logo">
@@ -53,11 +49,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-1-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-1-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -113,11 +105,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-2-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-2-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -173,11 +161,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-3-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-3-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -233,11 +217,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-4-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-4-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -293,11 +273,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-5-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-5-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -353,11 +329,7 @@
           <div class="card__header">
             <div class="card__picture">
               <div class="card__picture-overlay">&nbsp;</div>
-              <img
-                src="img/tour-6-cover.jpg"
-                alt="Tour 1"
-                class="card__picture-img"
-              />
+              <img src="img/tour-6-cover.jpg" alt="Tour 1" class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -368,8 +340,7 @@
           <div class="card__details">
             <h4 class="card__sub-heading">Difficult 14-day tour</h4>
             <p class="card__text">
-              Surfing, skating, parajumping, rock climbing and more, all in one
-              tour
+              Surfing, skating, parajumping, rock climbing and more, all in one tour
             </p>
             <div class="card__data">
               <svg class="card__icon">
@@ -423,9 +394,7 @@
         <li><a href="#">Careers</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <p class="footer__copyright">
-        &copy; by Jonas Schmedtmann. All rights reserved.
-      </p>
+      <p class="footer__copyright">&copy; by Jonas Schmedtmann. All rights reserved.</p>
     </div>
   </body>
 </html>
